# file-utils

./: .gitignore  pyproject.toml
.github/workflows/: publish-github-release.yaml
file_utils/: __init__.py  _base.py  _json.py
tests/fixtures/: file_fixture.py  util.py
tests/test_base/: test_read_file.py
